package io.github.serpean.vikingship.canvas

import android.graphics.Color

class Island(centerX: Float, centerY: Float) :
    CanvasEntity(centerX, centerY, 200f, Color.BLUE)