package io.github.serpean.vikingship.canvas

import android.graphics.Color


class Rock(centerX: Float, centerY: Float, size: Float) :
    CanvasEntity(centerX, centerY, size, Color.RED)