package io.github.serpean.vikingship.canvas

import android.graphics.Color

class Ship(centerX: Float, centerY: Float) :
    CanvasEntity(centerX, centerY, 100f, Color.MAGENTA)
