package io.github.serpean.vikingship.canvas

import android.graphics.Color

class Wind(centerX: Float, centerY: Float) :
    CanvasEntity(centerX, centerY, 400f, Color.WHITE)