@startuml
class Game {
    + endPoint : Float
    + xLength : Float
    + yLength : Float
}

class CanvasEntity {
    + centerX : Float
    + centerY : Float
    + size : Integer
    + color : Integer
    + texture : Bitmap
}

class Ship extends CanvasEntity {
}

class Rock extends CanvasEntity {
}

class Island extends CanvasEntity {
}

class Wind extends CanvasEntity {
}

class VikingGameView

MainActivity "1" *--> "1" VikingGameView
VikingGameView "1" *--> "1" Game
VikingGameView "1" *--> "*" Wind : WindPlayers

Game "1" *--> "1" Ship
Game "1" *--> "1" Island
Game "1" *--> "*" Rock

@enduml
